--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Untree.co">
-	<link rel="shortcut icon" href="{% static 'favicon.png' %}">
+	<link rel="shortcut icon" href="{% static 'images/favicon.png' %}">
 
 	<meta name="description" content="" />
 	<meta name="keywords" content="bootstrap, bootstrap4" />
@@ -42,7 +42,7 @@
 					<li><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link" href="about.html">About us</a></li>
 					<li><a class="nav-link" href="services.html">Services</a></li>
-					<li><a class="nav-link" href="contact.html">Contact us</a></li>
+					<li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
 				</ul>
 			</div>
 		</div>
@@ -454,7 +454,7 @@
 									alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
 
 						<form action="#" class="row g-3">
-							<div class="col-auto">
+							<div class="col-auto">i
 								<input type="text" class="form-control" placeholder="Enter your name">
 							</div>
 							<div class="col-auto">
