--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -84,18 +84,19 @@
                 </div>
               </div>
 
-              <form>
+              <form method="post">
+				{% csrf_token %}
                 <div class="row">
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="fname">Name</label>
-                      <input type="text" class="form-control" id="fname" placeholder="Your Name">
+                      <input name="name" type="text" class="form-control" id="fname" placeholder="Your Name">
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="lname">Number</label>
-                      <input type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789">
+                      <input name="mobile" type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789">
                     </div>
                   </div>
                 </div>
@@ -104,13 +105,13 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="fname">From Location</label>
-						<input type="text" class="form-control" id="fname" placeholder="From Location">
+						<input type="text" name="froml" class="form-control" id="fname" placeholder="From Location">
 					  </div>
 					</div>
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="lname">To location</label>
-						<input type="text" class="form-control" id="lname" placeholder="To Location">
+						<input type="text" name="tol" class="form-control" id="lname" placeholder="To Location">
 					  </div>
 					</div>
 				  </div>
@@ -118,7 +119,7 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="fname">Price</label>
-						<select class="form-select" aria-label="Default select example">
+						<select class="form-select" name="price" aria-label="Default select example">
 							<option selected>Select Plan Price</option>
 							<option value="1">One</option>
 							<option value="2">Two</option>
@@ -131,14 +132,14 @@
 					</div>
 					<div class="col-6">
 					  <div class="form-group">
-						<label class="text-black" for="date">Date</label>
+						<label class="text-black" name="date" for="date">Date</label>
 						<input type="date" class="form-control" id="date">
 					  </div>
 					</div>
 				  </div>
 				
                 <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
+                  <label class="text-black" name="email" for="email">Email address</label>
                   <input type="email" class="form-control" id="email" placeholder="Your@email.com">
                 </div>
 
