--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -22,7 +22,8 @@
 
 		<!-- Bootstrap CSS -->
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css' %}" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
 	<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -121,11 +122,11 @@
 						<label class="text-black" for="fname">Price</label>
 						<select class="form-select" name="price" aria-label="Default select example">
 							<option selected>Select Plan Price</option>
-							<option value="1">One</option>
-							<option value="2">Two</option>
-							<option value="3">Three</option>
-							<option value="4">Three</option>
-							<option value="5">Three</option>
+							<option value="100">One</option>
+							<option value="200">Two</option>
+							<option value="300">Three</option>
+							<option value="400">Four</option>
+							<option value="500">Five</option>
 
 						  </select>
 					  </div>
@@ -133,14 +134,14 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" name="date" for="date">Date</label>
-						<input type="date" class="form-control" id="date">
+						<input type="date" name="date" class="form-control" id="date">
 					  </div>
 					</div>
 				  </div>
 				
                 <div class="form-group">
-                  <label class="text-black" name="email" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" placeholder="Your@email.com">
+                  <label class="text-black"  for="email">Email address</label>
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Your@email.com">
                 </div>
 
                 <button  type="submit" class="btn btn-primary-hover-outline m-3 md-4">Send Message</button>
