--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+	
 
 	<!-- Start Header/Navigation -->
 	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
@@ -35,7 +36,7 @@
 
 			<div class="collapse navbar-collapse" id="navbarsFurni">
 				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-					<li><a class="nav-link btn" href="blog.html">+61 434 653 406</a></li>
+					<li><a class="nav-link btn" target="_blank" href="tel:+61434653406">+61 434 653 406</a></li>
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
@@ -58,7 +59,7 @@
 					<div class="intro-excerpt">
 						<h1>OG Movers and Packers<span clsas="d-block"></span></h1>
 						<p class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
-						<p><a href="" class="btn btn-secondary me-2">Shop Now</a><a href="#"
+						<p><a href="" class="btn btn-secondary me-2">Get a Quote</a><a href="#"
 								class="btn btn-white-outline">Explore</a></p>
 					</div>
 				</div>
@@ -70,7 +71,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- End Hero Section -->
 
 	<!-- Start Product Section -->
 	<div class="product-section">
@@ -470,7 +470,6 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="row g-5 mb-5">
 				<div class="col-lg-4">
 					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Elevating Relocation Experiences with Expertise and Care!<span>.</span></a></div>
@@ -546,6 +545,12 @@
 		</div>
 	</footer>
 	<!-- End Footer Section -->
+	<style>
+		body{
+			margin-left: 0;
+			margin-right: 0;
+		}
+	</style>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
