--- a/static/css/style.css
+++ b/static/css/style.css
@@ -146,10 +146,10 @@ a {
           right: -100px; } }
     .hero .hero-img-wrap:after {
       content: "";
-      position: absolute;
-      width: 255px;
-      height: 217px;
-      background-image: url("../images/dots-light.svg");
+      /* position: absolute; */
+      /* width: 255px;
+      height: 217px; */
+      /* background-image: url("../images/dots-light.svg"); */
       background-size: contain;
       background-repeat: no-repeat;
       right: -100px;
