--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -90,13 +90,13 @@
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="fname">Name</label>
-                      <input name="name" type="text" class="form-control" id="fname" placeholder="Your Name">
+                      <input name="name" type="text" class="form-control" id="fname" placeholder="Your Name" required>
                     </div>
                   </div>
                   <div class="col-6">
                     <div class="form-group">
                       <label class="text-black" for="lname">Number</label>
-                      <input name="mobile" type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789">
+                      <input name="mobile" type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789" required>
                     </div>
                   </div>
                 </div>
@@ -105,13 +105,13 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="fname">From Location</label>
-						<input type="text" name="froml" class="form-control" id="fname" placeholder="From Location">
+						<input type="text" name="froml" class="form-control" id="fname" placeholder="From Location" required>
 					  </div>
 					</div>
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="lname">To location</label>
-						<input type="text" name="tol" class="form-control" id="lname" placeholder="To Location">
+						<input type="text" name="tol" class="form-control" id="lname" placeholder="To Location" required>
 					  </div>
 					</div>
 				  </div>
@@ -119,13 +119,12 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" for="fname">Price</label>
-						<select class="form-select" name="price" aria-label="Default select example">
-							<option selected>Select Plan Price</option>
-							<option value="100">One</option>
-							<option value="200">Two</option>
-							<option value="300">Three</option>
-							<option value="400">Four</option>
-							<option value="500">Five</option>
+						<select class="form-select" name="price" aria-label="Default select example" required>
+							<option value="95">95$</option>
+							<option value="99">99$</option>
+							<option value="110">110$</option>
+							<option value="135">135$</option>
+							<option value="169">169$</option>
 
 						  </select>
 					  </div>
@@ -133,17 +132,17 @@
 					<div class="col-6">
 					  <div class="form-group">
 						<label class="text-black" name="date" for="date">Date</label>
-						<input type="date" name="date" class="form-control" id="date">
+						<input type="date" name="date" class="form-control" id="date" required>
 					  </div>
 					</div>
 				  </div>
 				
                 <div class="form-group">
                   <label class="text-black"  for="email">Email address</label>
-                  <input type="email" name="email" class="form-control" id="email" placeholder="Your@email.com">
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Your@email.com" required>
                 </div>
 
-                <button  type="submit" class="btn btn-primary-hover-outline m-3 md-4">Send Message</button>
+                <button  type="submit" class="btn btn-primary-hover-outline m-3 md-4">Get a Quote</button>
               </form>
 
             </div>
