--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -17,12 +17,11 @@
 	<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-	<title>Furni Free Bootstrap 5 Template for Furniture and Interior Design Websites by Untree.co </title>
+	<title>OG Movers and Packers</title>
 </head>
 
 <body>
-	
-
+	  
 	<!-- Start Header/Navigation -->
 	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
@@ -38,11 +37,10 @@
 				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
 					<li><a class="nav-link btn" target="_blank" href="tel:+61434653406">+61 434 653 406</a></li>
 					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
+						<a class="nav-link" href="/">Home</a>
 					</li>
-					<li><a class="nav-link" href="shop.html">Shop</a></li>
-					<li><a class="nav-link" href="about.html">About us</a></li>
-					<li><a class="nav-link" href="services.html">Services</a></li>
+					<li><a class="nav-link" href="/">About us</a></li>
+					<li><a class="nav-link" href="/">Services</a></li>
 					<li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
 				</ul>
 			</div>
@@ -52,6 +50,9 @@
 	<!-- End Header/Navigation -->
 
 	<!-- Start Hero Section -->
+	<a href="https://api.whatsapp.com/send?phone=+61434653406&text=Hello%2C%20I%27m%20interested%20in%20your%20services." class="fixed-button whatsapp-button">
+		<i class="fab fa-whatsapp"></i>
+	  </a>
 	<div class="hero">
 		<div class="container">
 			<div class="row justify-content-between">
@@ -59,7 +60,7 @@
 					<div class="intro-excerpt">
 						<h1>OG Movers and Packers<span clsas="d-block"></span></h1>
 						<p class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
-						<p><a href="" class="btn btn-secondary me-2">Get a Quote</a><a href="#"
+						<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a href="{% url 'contact' %}"
 								class="btn btn-white-outline">Explore</a></p>
 					</div>
 				</div>
@@ -82,22 +83,20 @@
 					<h2 class="mb-4 section-title">Specialty in Item Handling</h2>
 					<p class="mb-4">
 						Expert handling of delicate or valuable items such as antiques, pianos, artwork, and electronics. </p>
-					<p><a href="shop.html" class="btn">Explore</a></p>
+					<p><a href="{% url 'contact' %}" class="btn">Explore</a></p>
 				</div>
 				<!-- End Column 1 -->
 
 				<!-- Start Column 2 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
 						<h3 class="product-title">
-							5 ton truck
-							Suitable: 1-2 Bedrooms
-							5 ton truck: 26 cubic meters
-							
-							2 Movers
-							Fully Insured
-							South Australia</h3>
+							<p>Suitable: 1-2 Bedrooms</p>
+							<p>5 ton truck: 26 cubic meters</p>
+							<p>2 Movers</p>
+							<p>Fully Insured</p>
+							<p>South Australia</p></h3>
 
 						<strong class="product-price">$99/Hour</strong>
 
@@ -110,17 +109,17 @@
 
 				<!-- Start Column 3 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-2.png'%}" class="img-fluid product-thumbnail">
-						<h3 class="product-title">Suitable for 1-3 Bedrooms
-							5 ton truck: 26 cubic meters
-							2 Movers
-							Fully Insured
-							South Australia</h3>
+						<h3 class="product-title"><p>Suitable for 1-3 Bedrooms</p>
+							<p>5 ton truck: 26 cubic meters</p>
+							<p>2 Movers</p>
+							<p>Fully Insured</p>
+							<p>South Australia</p></h3>
 						<strong class="product-price">$110/Hour</strong>
 
 						<span class="icon-cross">
-							<img src="{% static 'images/cross.svg' %}" class="img-fluid">
+							<img id="dollor" src="{% static 'images/cross.svg' %}" class="img-fluid">
 						</span>
 					</a>
 				</div>
@@ -128,17 +127,17 @@
 
 				<!-- Start Column 4 -->
 				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
-					<a class="product-item" href="cart.html">
+					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
-						<h3 class="product-title">Suitable for 2-4 Bedrooms
-							5 ton truck: 26 cubic meters
-							2 Movers
-							Fully Insured
-							South Australia</h3>
+						<h3 class="product-title"><p>Suitable for 2-4 Bedrooms</p>
+							<p>5 ton truck: 26 cubic meters</p>
+							<p>2 Movers</p>
+							<p>Fully Insured</p>
+							<p>South Australia</p></h3>
 						<strong class="product-price">$169/Hour</strong>
 
 						<span class="icon-cross">
-							<img src="{% static 'images/cross.svg'%}" class="img-fluid">
+							<img id="dollor" src="{% static 'images/cross.svg'%}" class="img-fluid">
 						</span>
 					</a>
 				</div>
@@ -230,8 +229,8 @@
 
 					<ul class="list-unstyled custom-list my-4">
 						<h2 class="section-title mb-4">&nbsp;&nbsp;&nbsp;&nbsp;<span>Vision</span><span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Mission</span></h2>
-						<li>
-							<b>Empowering Transitions</b></li>&nbsp;&nbsp;&nbsp;&nbsp;
+						
+						<li><b>Empowering Transitions</b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 						<li><b>Setting Industry Standards</b> </li>&nbsp;&nbsp;&nbsp;&nbsp;
 						
 						<li><b>Customer Centric Excellence </b></li>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -443,31 +442,9 @@
 	<footer class="footer-section">
 		<div class="container relative">
 
-			<div class="sofa-img">
-				<img src="{% static 'images/helping.png'%}" alt="Image" class="img-fluid">
-			</div>
-
 			<div class="row">
 				<div class="col-lg-8">
-					<div class="subscription-form">
-						<h3 class="d-flex align-items-center"><span class="me-1"><img src="{% static 'images/envelope-outline.svg'%}"
-									alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
-
-						<form action="#" class="row g-3">
-							<div class="col-auto">
-								<input type="text" class="form-control" placeholder="Enter your name">
-							</div>
-							<div class="col-auto">
-								<input type="email" class="form-control" placeholder="Enter your email">
-							</div>
-							<div class="col-auto">
-								<button class="btn btn-primary">
-									<span class="fa fa-paper-plane"></span>
-								</button>
-							</div>
-						</form>
-
-					</div>
+					
 				</div>
 			</div>
 			<div class="row g-5 mb-5">
@@ -478,7 +455,7 @@
 					<ul class="list-unstyled custom-social">
 						<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
 						<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
+						<li><a href="https://www.instagram.com/ogmovers/" target="_blank"><span class="fa fa-brands fa-instagram"></span></a></li>
 						<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
 					</ul>
 				</div>
@@ -488,36 +465,14 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="#">About us</a></li>
-								<li><a href="#">Services</a></li>
-								<li><a href="#">Blog</a></li>
-								<li><a href="#">Contact us</a></li>
+								<li><a href="">Services</a></li>
+								<li><a href="{% url 'contact' %}">Contact us</a></li>
 							</ul>
 						</div>
 
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="#">Support</a></li>
-								<li><a href="#">Knowledge base</a></li>
-								<li><a href="#">Live chat</a></li>
-							</ul>
-						</div>
 
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="#">Jobs</a></li>
-								<li><a href="#">Our team</a></li>
-								<li><a href="#">Leadership</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
+			
 
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="#">Nordic Chair</a></li>
-								<li><a href="#">Kruzo Aero</a></li>
-								<li><a href="#">Ergonomic Chair</a></li>
-							</ul>
-						</div>
 					</div>
 				</div>
 
@@ -545,12 +500,12 @@
 		</div>
 	</footer>
 	<!-- End Footer Section -->
-	<style>
-		body{
-			margin-left: 0;
-			margin-right: 0;
-		}
-	</style>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
+	<!-- Bootstrap JS and its dependencies -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
