--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -58,7 +58,7 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-5">
 					<div class="intro-excerpt">
-						<h1>OG Movers and Packers<span clsas="d-block"></span></h1>
+						<h1>Best removalist in Adelaide<span clsas="d-block"></span></h1>
 						<p class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
 						<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a href="{% url 'contact' %}"
 								class="btn btn-white-outline">Explore</a></p>
