--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
-	{% load static %}
+{% load static %}
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,134 +11,145 @@
   <meta name="keywords" content="bootstrap, bootstrap4" />
 
 
-  
 
-		<!-- Bootstrap CSS -->
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="{% static 'css/tiny-slider.css' %}" rel="stylesheet">
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <title>OG Movers and Packers</title>
-	</head>
+</head>
 
-	<body>
-
-		
-		<!-- Start Contact Form -->
-		<div class="untree_co-section">
-      <div class="container">
-
-        <div class="block">
-          <div class="row justify-content-center">
+<body>
 
 
-            <div class="col-md-8 col-lg-8 pb-4">
+  <!-- Start Contact Form -->
+  <div class="untree_co-section">
+    <div class="container">
+
+      <div class="block">
+        <div class="row justify-content-center">
 
 
-              <div class="row mb-5">
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-                        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+          <div class="col-md-8 col-lg-8 pb-4">
+
+
+            <div class="row mb-5">
+              <div class="col-lg-4">
+                <div class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left"
+                  data-aos-delay="0">
+                  <div class="service-icon color-1 mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                      <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                    </svg>
+                  </div> <!-- /.icon -->
+                  <div class="service-contents">
+                    <p>43 Raymouth Rd. Baltemoer, London 3910</p>
+                  </div> <!-- /.service-contents-->
+                </div> <!-- /.service -->
+              </div>
+
+              <div class="col-lg-4">
+                <div class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left"
+                  data-aos-delay="0">
+                  <div class="service-icon color-1 mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-envelope-fill" viewBox="0 0 16 16">
+                      <path
+                        d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z" />
+                    </svg>
+                  </div> <!-- /.icon -->
+                  <div class="service-contents">
+                    <p>info@yourdomain.com</p>
+                  </div> <!-- /.service-contents-->
+                </div> <!-- /.service -->
+              </div>
+
+              <div class="col-lg-4">
+                <div class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left"
+                  data-aos-delay="0">
+                  <div class="service-icon color-1 mb-4">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                      class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                      <path fill-rule="evenodd"
+                        d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+                    </svg>
+                  </div> <!-- /.icon -->
+                  <div class="service-contents">
+                    <a target="_blank" href="tel:+61434653406">
+                      <p>+61 434 653 406</p>
+                    </a>
+                  </div> <!-- /.service-contents-->
+                </div> <!-- /.service -->
+              </div>
+            </div>
+
+            <form method="POST">
+
+              <div class="row">
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" for="fname">Name</label>
+                    <input name="name" type="text" class="form-control" id="fname" placeholder="Your Name" required>
+                  </div>
                 </div>
-
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.104l5.803-3.558L0 4.697zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757zm3.436-.586L16 11.801V4.697l-5.803 3.546z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>info@yourdomain.com</p>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" for="lname">Number</label>
+                    <input name="mobile" type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789"
+                      required>
+                  </div>
                 </div>
+              </div>
+              {% csrf_token %}
+              <div class="row">
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" for="fname">From Location</label>
+                    <input type="text" name="froml" class="form-control" id="fname" placeholder="From Location"
+                      required>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" for="lname">To location</label>
+                    <input type="text" name="tol" class="form-control" id="lname" placeholder="To Location" required>
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" for="fname">Price</label>
+                    <select class="form-select" name="price" aria-label="Default select example" required>
+                      <option value="95">95$</option>
+                      <option value="99">99$</option>
+                      <option value="110">110$</option>
+                      <option value="135">135$</option>
+                      <option value="169">169$</option>
 
-                <div class="col-lg-4">
-                  <div  class="service no-shadow align-items-center link horizontal d-flex active" data-aos="fade-left" data-aos-delay="0">
-                    <div class="service-icon color-1 mb-4">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                      </svg>
-                    </div> <!-- /.icon -->
-                    <div class="service-contents">
-                      <a target="_blank" href="tel:+61434653406"><p>+61 434 653 406</p></a>
-                    </div> <!-- /.service-contents-->
-                  </div> <!-- /.service -->
+                    </select>
+                  </div>
+                </div>
+                <div class="col-6">
+                  <div class="form-group">
+                    <label class="text-black" name="date" for="date">Date</label>
+                    <input type="date" name="date" class="form-control" id="date" required>
+                  </div>
                 </div>
               </div>
 
-              <form method="post">
-				{% csrf_token %}
-                <div class="row">
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="fname">Name</label>
-                      <input name="name" type="text" class="form-control" id="fname" placeholder="Your Name" required>
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="lname">Number</label>
-                      <input name="mobile" type="number" class="form-control" id="lname" placeholder="eg.+61 123 456 789" required>
-                    </div>
-                  </div>
-                </div>
+              <div class="form-group">
+                <label class="text-black" for="email">Email address</label>
+                <input type="email" name="email" class="form-control" id="email" placeholder="Your@email.com" required>
+              </div>
 
-				<div class="row">
-					<div class="col-6">
-					  <div class="form-group">
-						<label class="text-black" for="fname">From Location</label>
-						<input type="text" name="froml" class="form-control" id="fname" placeholder="From Location" required>
-					  </div>
-					</div>
-					<div class="col-6">
-					  <div class="form-group">
-						<label class="text-black" for="lname">To location</label>
-						<input type="text" name="tol" class="form-control" id="lname" placeholder="To Location" required>
-					  </div>
-					</div>
-				  </div>
-				  <div class="row">
-					<div class="col-6">
-					  <div class="form-group">
-						<label class="text-black" for="fname">Price</label>
-						<select class="form-select" name="price" aria-label="Default select example" required>
-							<option value="95">95$</option>
-							<option value="99">99$</option>
-							<option value="110">110$</option>
-							<option value="135">135$</option>
-							<option value="169">169$</option>
-
-						  </select>
-					  </div>
-					</div>
-					<div class="col-6">
-					  <div class="form-group">
-						<label class="text-black" name="date" for="date">Date</label>
-						<input type="date" name="date" class="form-control" id="date" required>
-					  </div>
-					</div>
-				  </div>
-				
-                <div class="form-group">
-                  <label class="text-black"  for="email">Email address</label>
-                  <input type="email" name="email" class="form-control" id="email" placeholder="Your@email.com" required>
-                </div>
-
-                <button  type="submit" class="btn btn-primary-hover-outline m-3 md-4">Get a Quote</button>
-              </form>
-
-            </div>
+              <button type="submit" class="btn btn-primary-hover-outline m-3 md-4">Get a Quote</button>
+            </form>
 
           </div>
 
@@ -145,14 +157,18 @@
 
       </div>
 
-
     </div>
+
+
+  </div>
   </div>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-	<script src="{% static 'js/tiny-slider.js' %}"></script>
-	<script src="{% static 'js/custom.js' %}"></script>
-	</body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="{% static 'js/tiny-slider.js' %}"></script>
+  <script src="{% static 'js/custom.js' %}"></script>
+</body>
 
 </html>
