--- a/ogapp/templates/contact.html
+++ b/ogapp/templates/contact.html
@@ -126,13 +126,13 @@
                   <div class="form-group">
                     <label class="text-black" for="fname">Price</label>
                     <select class="form-select" name="price" aria-label="Default select example" required>
-                      <option value="99">One Bedroom - 99$ </option>
-                      <option value="110">Two Bedrooms - 110$</option>
-                      <option value="135">Three Bedrooms - 135$</option>
-                      <option value="169">Four Bedrooms - 169$</option>
-                      <option value="95">Few items - 95$</option>
-                      <option value="120">Piano - 120$ </option>
-                      <option value="140">Pool Table - 140$</option>
+                      <option value="1001">One Bedroom</option>
+                      <option value="1002">Two Bedrooms</option>
+                      <option value="1003">Three Bedrooms</option>
+                      <option value="1004">Four Bedrooms +</option>
+                      <option value="1005">Few items - 95$</option>
+                      <option value="1006">Piano</option>
+                      <option value="1007">Pool Table</option>
 
 
                     </select>
