--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -60,8 +60,8 @@
 					<div class="intro-excerpt">
 						<h1>Best removalist in Adelaide<span clsas="d-block"></span></h1>
 						<p class="mb-4">Where Experience Meets Excellence in Relocation Solutions!</p>
-						<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a href="{% url 'contact' %}"
-								class="btn btn-white-outline">Explore</a></p>
+						<p><a href="{% url 'contact' %}" class="btn btn-secondary me-2">Get a Quote</a><a target="_blank" href="tel:+61434653406"
+								class="btn btn-white-outline">Call Us Now</a></p>
 					</div>
 				</div>
 				<div class="col-lg-7">
@@ -83,12 +83,13 @@
 					<h2 class="mb-4 section-title">Specialty in Item Handling</h2>
 					<p class="mb-4">
 						Expert handling of delicate or valuable items such as antiques, pianos, artwork, and electronics. </p>
-					<p><a href="{% url 'contact' %}" class="btn">Explore</a></p>
+					<p><a target="_blank" href="https://api.whatsapp.com/send?phone=+61434653406&text=Hello%2C%20I%27m%20interested%20in%20your%20services."
+						class="btn">Contact Us</a></p>
 				</div>
 				<!-- End Column 1 -->
 
 				<!-- Start Column 2 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0 border">
 					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-1.png' %}" class="img-fluid product-thumbnail">
 						<h3 class="product-title">
@@ -108,7 +109,7 @@
 				<!-- End Column 2 -->
 
 				<!-- Start Column 3 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0 border">
 					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-2.png'%}" class="img-fluid product-thumbnail">
 						<h3 class="product-title"><p>Suitable for 1-3 Bedrooms</p>
@@ -126,7 +127,7 @@
 				<!-- End Column 3 -->
 
 				<!-- Start Column 4 -->
-				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+				<div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0 border">
 					<a class="product-item" href="{% url 'contact' %}">
 						<img src="{% static 'images/product-3.png' %}" class="img-fluid product-thumbnail">
 						<h3 class="product-title"><p>Suitable for 2-4 Bedrooms</p>
@@ -467,6 +468,8 @@
 								<li><a href="#">About us</a></li>
 								<li><a href="">Services</a></li>
 								<li><a href="{% url 'contact' %}">Contact us</a></li>
+								<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+								</li>
 							</ul>
 						</div>
 
