--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -325,10 +325,10 @@
 
 											<div class="author-info">
 												<div class="author-pic">
-													<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
+													<!-- <img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid"> -->
 												</div>
-												<h3 class="font-weight-bold">Client Testimonial 1</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">Sara Adam</h3>
+												<!-- <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span> -->
 											</div>
 										</div>
 
@@ -348,10 +348,10 @@
 
 											<div class="author-info">
 												<div class="author-pic">
-													<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
+													<!-- <img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid"> -->
 												</div>
-												<h3 class="font-weight-bold">Client Testimonial 2</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">John smith</h3>
+												<!-- <span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span> -->
 											</div>
 										</div>
 
@@ -371,10 +371,9 @@
 
 											<div class="author-info">
 												<div class="author-pic">
-													<img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid">
+													<!-- <img src="{% static 'images/person-1.png'%}" alt="Maria Jones" class="img-fluid"> -->
 												</div>
-												<h3 class="font-weight-bold">Client Testimonial 3</h3>
-												<span class="position d-block mb-3">CEO, Co-Founder, XYZ Inc.</span>
+												<h3 class="font-weight-bold">Robot dony</h3>
 											</div>
 										</div>
 
