updated google ads files

--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	  
+
 	<!-- Start Header/Navigation -->
 	<nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="Furni navigation bar">
 
@@ -72,6 +72,8 @@
 			</div>
 		</div>
 	</div>
+<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+<div class="elfsight-app-eafe7237-0678-49ca-87f8-e17291ab2477" data-elfsight-app-lazy></div>
 
 	<!-- Start Product Section -->
 	<div class="product-section">
@@ -226,18 +228,18 @@
 				<div class="col-lg-5 ps-lg-5">
 					<h2 class="section-title mb-4">Our Vision & Mission</h2>
 					<p>OGMovers envisions a seamless world of transitions where relocation is a stress-free experience. Our mission is to redefine moving through innovation, reliability, and customer-centric solutions. We aim to set industry benchmarks, prioritizing client satisfaction and sustainability. Committed to excellence, we strive to be the preferred choice for individuals and businesses alike, fostering a global community linked by efficient and ethical moving practices. OGMovers seeks to inspire confidence, making every move a step toward a brighter, more connected future.</p>
-						
+
 
 					<ul class="list-unstyled custom-list my-4">
 						<h2 class="section-title mb-4">&nbsp;&nbsp;&nbsp;&nbsp;<span>Vision</span><span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Mission</span></h2>
-						
+
 						<li><b>Empowering Transitions</b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 						<li><b>Setting Industry Standards</b> </li>&nbsp;&nbsp;&nbsp;&nbsp;
-						
+
 						<li><b>Customer Centric Excellence </b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 						<li><b>Reliability and Trust </b></li>&nbsp;&nbsp;&nbsp;&nbsp;
 					</ul>
-					
+
 					<p><a herf="#" class="btn">Explore</a></p>
 				</div>
 			</div>
@@ -408,7 +410,7 @@
 								class="img-fluid"></a>
 						<div class="post-content-entry">
 							<h3><a href="#"></a>Packing Supplies Provision </h3>
-						
+
 						</div>
 					</div>
 				</div>
@@ -444,7 +446,7 @@
 
 			<div class="row">
 				<div class="col-lg-8">
-					
+
 				</div>
 			</div>
 			<div class="row g-5 mb-5">
@@ -467,13 +469,14 @@
 								<li><a href="#">About us</a></li>
 								<li><a href="">Services</a></li>
 								<li><a href="{% url 'contact' %}">Contact us</a></li>
-								<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+								<li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin" width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
+								<!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
 								</li>
 							</ul>
 						</div>
 
 
-			
+
 
 					</div>
 				</div>
@@ -492,7 +495,9 @@
 					<div class="col-lg-6 text-center text-lg-end">
 						<ul class="list-unstyled d-inline-flex ms-auto">
 							<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-							<li><a href="#">Privacy Policy</a></li>
+							<li><a href="#">Privacy Policy </a></li><br>
+							    <a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
+
 						</ul>
 					</div>
 
@@ -501,6 +506,14 @@
 
 		</div>
 	</footer>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16485596543"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16485596543');
+</script>
 	<!-- End Footer Section -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
