added terms and codition and privacy policy

--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -66,6 +66,11 @@
 				</div>
 				<div class="col-lg-7">
 					<div class="hero-img-wrap">
+						<!-- <video autoplay muted loop id="myVideo">
+							<source src= "{% static 'OG Movers and Packers.mp4'%} " type="video/mp4">
+							Your browser does not support HTML5 video.
+						  </video> -->
+						  
 						<img he src="{% static 'images/couch.png'%}" class="img-fluid">
 					</div>
 				</div>
@@ -467,7 +472,7 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="#">About us</a></li>
-								<li><a href="">Services</a></li>
+								<li><a href="{% url 'terms' %}">Terms and Conditions</a></li>
 								<li><a href="{% url 'contact' %}">Contact us</a></li>
 								<li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d59644446.984194264!2d91.5130743!3d-24.157415!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa20ad3b42d0d0245%3A0x3f36b978203408ab!2sOG%20Movers!5e0!3m2!1sen!2sin!4v1714326969689!5m2!1sen!2sin" width="340" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></li>
 								<!--<li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509577!2d144.95373531544364!3d-37.817209979751984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ab0c93b70926705%3A0x1c033657a35104f0!2sAdelaide+SA+5000,+Australia!5e0!3m2!1sen!2sau!4v1630291924470!5m2!1sen!2sau" width="350" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>-->
@@ -494,8 +499,8 @@
 
 					<div class="col-lg-6 text-center text-lg-end">
 						<ul class="list-unstyled d-inline-flex ms-auto">
-							<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-							<li><a href="#">Privacy Policy </a></li><br>
+							<li class="me-4"><a href="{% url 'terms' %}">Terms &amp; Conditions</a></li>
+							<li><a href="{% url 'privacy' %}">Privacy Policy </a></li><br>
 							    <a href="https://mandeep.pythonanywhere.com/" class="text-muted m-3">Developer © 2024</a>
 
 						</ul>
