--- a/ogapp/templates/index.html
+++ b/ogapp/templates/index.html
@@ -40,7 +40,7 @@
 						<a class="nav-link" href="/">Home</a>
 					</li>
 					<li><a class="nav-link" href="{% url 'contact' %}">Contact us</a></li>
-					<li><a class="nav-link" href="/">Services</a></li>
+					<li><a class="nav-link" href="{% url 'service' %}">Services</a></li>
 					<li><a class="nav-link" href="/">About us</a></li>
 				</ul>
 			</div>
